--- a/Analog/Base.lproj/Main.storyboard
+++ b/Analog/Base.lproj/Main.storyboard
@@ -1039,7 +1039,7 @@
                                                     <rect key="frame" x="15" y="0.0" width="352" height="43"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="alphabet" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="alphabet" returnKeyType="done"/>
                                                     <connections>
                                                         <action selector="rollFieldReturned:" destination="a1a-wR-w3Z" eventType="primaryActionTriggered" id="1gc-Cu-nzj"/>
                                                     </connections>
@@ -1189,8 +1189,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Last Edited Frame" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Sf-Vi-fMY">
-                                                    <rect key="frame" x="15" y="12" width="138.5" height="20.5"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Last Added Frame No." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Sf-Vi-fMY">
+                                                    <rect key="frame" x="15" y="12" width="170.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -1256,7 +1256,7 @@
                         <outlet property="framesLabel" destination="AL3-55-aOJ" id="Fcc-OB-vlq"/>
                         <outlet property="framesRecordedLabel" destination="2tv-cN-3g5" id="17E-GD-jjP"/>
                         <outlet property="isoLabel" destination="ofX-bz-XvG" id="qjw-QI-gTP"/>
-                        <outlet property="lastEditedFrameLabel" destination="fkw-tQ-XLw" id="x8w-nv-7a2"/>
+                        <outlet property="lastAddedLabel" destination="fkw-tQ-XLw" id="dPv-q3-0fI"/>
                         <outlet property="pushPullLabel" destination="SOb-5w-y1h" id="3AH-px-KUm"/>
                         <outlet property="rollNameTextField" destination="nR5-gf-qVt" id="ru6-MC-6RH"/>
                     </connections>
