--- a/Analog/Base.lproj/Main.storyboard
+++ b/Analog/Base.lproj/Main.storyboard
@@ -492,11 +492,21 @@
                                             <action selector="addFrameButtonTapped:" destination="p11-OD-ebE" eventType="touchUpInside" id="NwY-2O-iig"/>
                                         </connections>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tap To Switch" translatesAutoresizingMaskIntoConstraints="NO" id="kkA-AJ-Lhz">
+                                        <rect key="frame" x="110" y="450" width="155" height="78"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="155" id="9gj-42-GU5"/>
+                                            <constraint firstAttribute="height" constant="78" id="z2B-sw-pxh"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="kkA-AJ-Lhz" secondAttribute="bottom" constant="15" id="5zJ-By-Mra"/>
                                     <constraint firstItem="q4i-kD-3mZ" firstAttribute="centerY" secondItem="gbr-DQ-zW3" secondAttribute="centerY" id="KKr-t6-EH0"/>
+                                    <constraint firstAttribute="trailing" secondItem="kkA-AJ-Lhz" secondAttribute="trailing" constant="110" id="ZGA-M9-08V"/>
                                     <constraint firstItem="q4i-kD-3mZ" firstAttribute="centerX" secondItem="gbr-DQ-zW3" secondAttribute="centerX" id="myv-YF-V7j"/>
+                                    <constraint firstItem="kkA-AJ-Lhz" firstAttribute="leading" secondItem="gbr-DQ-zW3" secondAttribute="leading" constant="110" id="vjO-zx-77B"/>
                                 </constraints>
                             </view>
                             <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Index Background" translatesAutoresizingMaskIntoConstraints="NO" id="xUO-IR-yJ0">
@@ -572,6 +582,7 @@
                         <outlet property="indexLabel" destination="rHt-JL-ol3" id="KGn-yV-rEW"/>
                         <outlet property="slider" destination="1Pg-7g-fmE" id="nUL-5F-LJl"/>
                         <outlet property="stepper" destination="aPB-ml-IZo" id="hHv-bA-9xY"/>
+                        <outlet property="tapToSwitchImage" destination="kkA-AJ-Lhz" id="QwX-Jf-khu"/>
                         <outlet property="viewToolBar" destination="VNo-nd-mEm" id="ekw-Em-qNU"/>
                         <segue destination="VQe-kw-HYS" kind="presentation" identifier="rollDetailSegue" id="M7m-ek-GHM"/>
                     </connections>
@@ -579,7 +590,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KgJ-eu-pGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9u8-Bf-dVA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2110" y="695"/>
+            <point key="canvasLocation" x="2109.5999999999999" y="694.90254872563719"/>
         </scene>
         <!--Frame Detail Table View Controller-->
         <scene sceneID="5fB-1k-Cjb">
@@ -1561,13 +1572,14 @@
         <image name="Lens" width="45" height="44"/>
         <image name="Location" width="30" height="41"/>
         <image name="Shutter" width="41" height="41"/>
+        <image name="Tap To Switch" width="156" height="80"/>
         <image name="Time" width="38" height="38"/>
         <image name="disclosure indicator" width="8" height="13"/>
         <image name="divider line" width="376" height="1"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="P8w-o8-lL5"/>
         <segue reference="2eD-m7-ub0"/>
+        <segue reference="P8w-o8-lL5"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
 </document>
