--- a/Analog/Base.lproj/Main.storyboard
+++ b/Analog/Base.lproj/Main.storyboard
@@ -494,9 +494,9 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tap To Switch" translatesAutoresizingMaskIntoConstraints="NO" id="kkA-AJ-Lhz">
-                                        <rect key="frame" x="110" y="450" width="155" height="78"/>
+                                        <rect key="frame" x="110.5" y="450" width="155" height="78"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="155" id="9gj-42-GU5"/>
+                                            <constraint firstAttribute="width" constant="155" id="O0v-dT-H37"/>
                                             <constraint firstAttribute="height" constant="78" id="z2B-sw-pxh"/>
                                         </constraints>
                                     </imageView>
@@ -504,10 +504,9 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="kkA-AJ-Lhz" secondAttribute="bottom" constant="15" id="5zJ-By-Mra"/>
+                                    <constraint firstItem="kkA-AJ-Lhz" firstAttribute="centerX" secondItem="gbr-DQ-zW3" secondAttribute="centerX" id="DGo-QC-MvD"/>
                                     <constraint firstItem="q4i-kD-3mZ" firstAttribute="centerY" secondItem="gbr-DQ-zW3" secondAttribute="centerY" id="KKr-t6-EH0"/>
-                                    <constraint firstAttribute="trailing" secondItem="kkA-AJ-Lhz" secondAttribute="trailing" constant="110" id="ZGA-M9-08V"/>
                                     <constraint firstItem="q4i-kD-3mZ" firstAttribute="centerX" secondItem="gbr-DQ-zW3" secondAttribute="centerX" id="myv-YF-V7j"/>
-                                    <constraint firstItem="kkA-AJ-Lhz" firstAttribute="leading" secondItem="gbr-DQ-zW3" secondAttribute="leading" constant="110" id="vjO-zx-77B"/>
                                 </constraints>
                             </view>
                             <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Index Background" translatesAutoresizingMaskIntoConstraints="NO" id="xUO-IR-yJ0">
